# claude-code-quiz-app

./: .gitignore  AGENTIC_DEVELOPMENT_SUMMARY.md  AGENT_EFFECTIVENESS_GUIDE.md  BACKEND_AGENT_IMPLEMENTATION.md  CLAUDE.md  DATABASE_AGENT_GUIDE.md  QUIZ_CONTENT_AGENT_GUIDE.md  README.md  app.py  init_db.py  models.py  quiz_data.py  requirements.txt
.hypr/assessment/assessment/: README.md
.hypr/assessment/assessment/backend/: backend-agent-rules.md  backend-assessment-agent.md
.hypr/assessment/assessment/frontend/: frontend-agent-rules.md  frontend-assessment-agent.md
.hypr/assessment/assessment/planning/: planning-agent-rules.md  planning-assessment-agent.md
context/: backend-agent.md  planning-agent.md
production-quiz-app/: .coveragerc  .dockerignore  .env.development  .env.example  .env.production  .env.staging  .flake8  .gitignore  .pre-commit-config.yaml  CICD.md  DEPLOYMENT.md  Dockerfile  LINTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run.py
production-quiz-app/.github/: CICD-QUICK-START.md  dependabot.yml  labeler.yml
production-quiz-app/.github/workflows/: ci.yml  codeql.yml  pr-labeler.yml
production-quiz-app/app/: __init__.py  config.py  extensions.py
production-quiz-app/app/forms/: __init__.py  auth_forms.py
production-quiz-app/app/models/: __init__.py  attempt.py  question.py  quiz.py  user.py  user_answer.py
production-quiz-app/app/routes/: __init__.py  auth.py  dashboard.py
production-quiz-app/app/services/: __init__.py  auth_service.py
production-quiz-app/app/templates/: attempt_detail.html  base.html  login.html  question.html
production-quiz-app/app/templates/auth/: login.html  register.html
production-quiz-app/app/templates/dashboard/: index.html
production-quiz-app/deployment/docker/: init-db.sh
production-quiz-app/deployment/nginx/: nginx.conf
production-quiz-app/deployment/nginx/conf.d/: quiz_app.conf
production-quiz-app/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md
production-quiz-app/migrations/versions/: d0a72a14ad60_initial_production_schema_with_enhanced_.py
production-quiz-app/requirements/: base.txt  development.txt  production.txt  testing.txt
production-quiz-app/scripts/: format.bat  format.sh  lint.bat  lint.sh  migrate_sqlite_to_pg.py  restore_db.sh  seed_data.py
production-quiz-app/tests/: __init__.py  conftest.py  factories.py
production-quiz-app/tests/e2e/: __init__.py
production-quiz-app/tests/integration/: __init__.py  test_auth_flow.py
production-quiz-app/tests/unit/: __init__.py  test_models.py  test_services.py
templates/: base.html  dashboard.html  history.html  index.html  question.html  results.html
